--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,18 @@ button{
     position: relative;
 }
 
+    button.formbutton{
+        width: 80%;
+        left: 10%;
+    }
+
 form{
     display: flex;
     flex-direction: row;
     max-width: 80%;
     width: 80%;
-    height: 100%;
+    gap: 10%;
+    align-self: center;
 }
 
 .column{
@@ -45,14 +51,13 @@ form{
     height: 100%;
     align-items: flex-start;
     justify-content: top;
-    margin-left: 10%;
 }
 
 .contenedor{
     border: #465375 solid 1px;
     border-radius: 8px;
     background-color: transparent;
-    margin-bottom: 3%;
+    margin-bottom: 4%;
     width: 100%;
 }
 
@@ -61,27 +66,27 @@ label{
     font-size: 120%;
     font-weight: bold;
     color: #465375;
+    margin-bottom: 1.5%;
 }
 
 input{
     font-family: 'Lucida Sans';
     font-size: 100%;
-    padding: 0.5%;
-    margin-top: 1%;
-    margin-bottom: 3%;
-    width: 100%;
+    margin-bottom: 4%;
+    width: 96%;
     background-color: transparent;
     border: #465375 solid 1px;
     border-radius: 8px;
+    padding: 2%;
 }
 
 textarea{
     font-family: 'Lucida Sans';
     font-size: 100%;
-    padding: 0.5%;
+    padding: 2%;
     margin-top: 1%;
     margin-bottom: 3%;
-    width: 100%;
+    width: 96%;
     height: 20%;
     background-color: transparent;
     border: #465375 solid 1px;
@@ -100,6 +105,15 @@ h1{
 h2{
     font-family: 'Lucida Sans';
     font-size: 2vw;
+    color: #465375;
+    text-align: center;
+    width: 100%;
+    margin-top: 5%;
+}
+
+h3{
+    font-family: 'Lucida Sans';
+    font-size: 1.5vw;
     color: #465375;
     text-align: center;
     width: 100%;
@@ -189,7 +203,7 @@ h2{
     height: 50%;
 }   
 
-#modal_google{
+.modal{
     display: none; 
     position: absolute;
     z-index: 1;
@@ -205,20 +219,28 @@ h2{
         display: grid; 
     }
 
-    #modal_google img{
-        content: url("../images/google_auth.png");
-        width: 80%;
-        height: auto;
-        position: relative;
-        top: 5%;
-        left: 10%;
+    .modal.active{
+        display: flex; 
+        flex-direction: column;
+        align-items: center;
     }
 
-    #modal_google button{
+    .modal button{
         width: 60%;
         height: 25%;
         left: 20%;
     }
+
+#modal_google img{
+    content: url("../images/google_auth.png");
+    width: 80%;
+    height: auto;
+    position: relative;
+    top: 5%;
+    left: 10%;
+}
+
+
 
 #vista_principal{
     display: none;
@@ -323,6 +345,7 @@ h2{
     border-width: 3px;
     display: flex;
     flex-direction: row;
+    cursor: pointer;
 }
 
     .alarm_card ul{
@@ -366,6 +389,104 @@ h2{
         border: black solid 1px;
     }
 
+.switch{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+    width: 5%;
+    align-self: center;
+    margin-bottom: 3%;
+}
+
+.switch img.on{
+    content: url("../images/switch_on.png");
+}
+
+.switch img.off{
+    content: url("../images/switch_off.png");
+}
+
+.input_hora{
+  display: flex;         
+  align-items: stretch;   
+  gap: 8px;  
+  margin: 5%;
+}
+
+.input_hora input{
+    align-self: stretch;
+    background-color: transparent;
+    text-align: center;
+    width: 30%;
+    font-family: 'Lucida Sans';
+    padding: 0;
+    font-size: 3vw;
+    margin-bottom: 0;
+}
+
+    .input_hora.duracion{
+        margin-left: 20%;
+    }
+
+    .input_hora.duracion input{
+        font-size: 2vw;
+    }
+
+.separador{
+    content: url("../images/separator.png");
+    height: 50%;
+    align-self: center;
+}
+
+#boton_am_pm.am{
+    content : url("../images/Period_Selector_am.png");
+}
+
+#boton_am_pm.pm{
+    content : url("../images/Period_Selector_pm.png");
+}
+
+table{
+    font-family: 'rockwell';
+    width: 100%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+td{
+    padding: 0.5%;
+    text-align: left;
+}
+
+input[type="radio"] {
+    background-color: transparent;
+    margin-top: 2px;
+    width: 15px;
+    height: 15px;
+    accent-color: black;
+}
+
+input[type="checkbox"] {
+    background-color: transparent;
+    margin-top: 2px;
+    width: 15px;
+    height: 15px;
+    accent-color: black;
+}
+
+table.opciones td:first-child{
+    width: 10%;
+}
+
+#btn_editar_alarma{
+    display: none;
+}
+
+#btn_eliminar_alarma{
+    display: none;
+}
+
 #crear_alarma{
     display: none;
     width: 80%;
@@ -390,8 +511,137 @@ h2{
 }
 
     #tareas.active{
-        display: block; 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
+
+#lista_tareas{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 0;
+}
+
+.tarea_card{
+    width: 40%;
+    height: 20%;
+    padding: 1%;
+    margin-bottom: 2%;
+    border-color: #465375;
+    border-style: solid;
+    border-width: 3px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    cursor: pointer;
+}
+
+.tarea_card ul{
+    max-height: 100%;
+    height: 100%;
+    position: relative;
+    margin-top: 0%;
+    padding: 0px;
+    margin-left: 16px;
+    top: 0%;
+    left: 0%;
+    list-style-type: none;
+}
+
+.tarea_card ul li:first-child{
+    font-family: 'Lucida Sans';
+    font-size: 100%;
+}
+
+.tarea_card ul li:last-child{
+    font-family: 'Lucida Sans';
+    font-size: 60%;
+    color: grey;
+}
+
+.tarea_card.modal{
+    width: 100%;
+    height: 20%;
+    position: relative;
+    left: 0%;
+}
+
+.tarea_card.alarma{
+    width: 100%;
+    height: 40px;
+}
+
+    .tarea_card.alarma.selected{
+        background-color: #959BBD;
+        color: white;
+    }
+
+.trailing{
+    content: url("../images/trailing.png");
+    float: right;
+    height: 50%;
+    align-self: center;
+}
+
+.crear_tarea_contenedor{
+    width: 100%;
+    height: 60%;
+}
+
+.button_container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 20%;
+    margin-top: auto;
+}
+
+.form_tarea{
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    max-width: 80%;
+    width: 80%;
+    margin-left: 10%;
+}
+
+#modal_seleccionar_tareas ul{
+    margin: 0;
+    padding: 0;
+    width: 80%;
+    height: 70%;
+}
+
+.tareas_modal_contenedor{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 70%;
+    overflow-y: auto;
+    padding: 0;
+    margin: 0;
+}
+
+#lista_tareas_alarma{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    list-style-type: none;
+}
+
+#crear_alarma .button_container{
+    height: 40%;
+}
+
+#crear_alarma .button_container button{
+    height: 20%;
+    max-height: 30px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
 
 #estadisticas{
     display: none;
